@@ -161,20 +161,21 @@ const unsigned short LCD_FONT_4X6[] IN_FLASH_MEMORY = { // from 33 up to 127
     PACK_5_TO_16( ___ , ___ , ___ , ___ , XXX )
 };
 
-void graphicsDrawChar4x6(JsGraphics *gfx, short x1, short y1, char ch) {
+void graphicsDrawChar4x6(JsGraphics *gfx, short x1, short y1, char ch, unsigned short size) {
   int idx = ((unsigned char)ch) - 33;
   if (idx<0 || idx>=LCD_FONT_4X6_CHARS) return; // no char for this - just return
   int cidx = idx % 5;
   idx = (idx/5)*6;
   int y;
+  short s = size-1;
   for (y=0;y<6;y++) {
     unsigned int line = READ_FLASH_UINT16(&LCD_FONT_4X6[idx + y]) >> (cidx*3);
-    if (line&4) graphicsSetPixel(gfx, (short)(x1+0), (short)(y+y1), gfx->data.fgColor);
-    if (line&2) graphicsSetPixel(gfx, (short)(x1+1), (short)(y+y1), gfx->data.fgColor);
-    if (line&1) graphicsSetPixel(gfx, (short)(x1+2), (short)(y+y1), gfx->data.fgColor);
+    short ly = y*size + y1;
+    if (line&4) graphicsFillRect(gfx, (short)(x1+0*size), ly, (short)(x1+s+0*size), ly+s);
+    if (line&2) graphicsFillRect(gfx, (short)(x1+1*size), ly, (short)(x1+s+1*size), ly+s);
+    if (line&1) graphicsFillRect(gfx, (short)(x1+2*size), ly, (short)(x1+s+2*size), ly+s);
   }
 }
-
 
 
 
