@@ -15,5 +15,5 @@
 #include "graphics.h"
 
 #ifdef USE_FONT_6X8
-void graphicsDrawChar6x8(JsGraphics *gfx, short x1, short y1, char ch);
+void graphicsDrawChar6x8(JsGraphics *gfx, short x1, short y1, char ch, unsigned short size);
 #endif
