@@ -49,12 +49,17 @@ typedef enum {
   JSGRAPHICSFLAGS_COLOR_MASK = JSGRAPHICSFLAGS_COLOR_BASE*7, //< All devices: color order is BRG
 } JsGraphicsFlags;
 
-#define JSGRAPHICS_FONTSIZE_4X6 (-1) // a bitmap font
-#define JSGRAPHICS_FONTSIZE_CUSTOM (-2) // a custom bitmap font made from fields in the graphics object (See below)
-// Positive font sizes are Vector fonts
+typedef enum {
+ JSGRAPHICS_FONTSIZE_SCALE_MASK = 8191, ///< the size of the font
+ JSGRAPHICS_FONTSIZE_FONT_MASK = 7 << 13, ///< the type of the font
+ JSGRAPHICS_FONTSIZE_VECTOR = 0,
+ JSGRAPHICS_FONTSIZE_4X6 = 1 << 13, // a bitmap font
 #ifdef USE_FONT_6X8
-#define JSGRAPHICS_FONTSIZE_6X8 (-3) // a bitmap font
+ JSGRAPHICS_FONTSIZE_6X8 = 2 << 13, // a bitmap font
 #endif
+ JSGRAPHICS_FONTSIZE_CUSTOM = 3 << 13,// a custom bitmap font made from fields in the graphics object (See below)
+} JsGraphicsFontSize;
+
 
 #define JSGRAPHICS_CUSTOMFONT_BMP JS_HIDDEN_CHAR_STR"fnB"
 #define JSGRAPHICS_CUSTOMFONT_WIDTH JS_HIDDEN_CHAR_STR"fnW"
@@ -67,7 +72,7 @@ typedef struct {
   unsigned short width, height; // DEVICE width and height (flags could mean the device is rotated)
   unsigned char bpp;
   unsigned int fgColor, bgColor; ///< current foreground and background colors
-  short fontSize; ///< See JSGRAPHICS_FONTSIZE_ constants
+  unsigned short fontSize; ///< See JSGRAPHICS_FONTSIZE_ constants
   short cursorX, cursorY; ///< current cursor positions
 #ifndef SAVE_ON_FLASH
   unsigned char fontAlignX : 2;
@@ -118,7 +123,7 @@ void graphicsDrawLine(JsGraphics *gfx, short x1, short y1, short x2, short y2);
 void graphicsFillPoly(JsGraphics *gfx, int points, short *vertices); // may overwrite vertices...
 #ifndef NO_VECTOR_FONT
 unsigned int graphicsFillVectorChar(JsGraphics *gfx, short x1, short y1, short size, char ch); ///< prints character, returns width
-unsigned int graphicsVectorCharWidth(JsGraphics *gfx, short size, char ch); ///< returns the width of a character
+unsigned int graphicsVectorCharWidth(JsGraphics *gfx, unsigned short size, char ch); ///< returns the width of a character
 #endif
 /// Draw a simple 1bpp image in foreground colour
 void graphicsDrawImage1bpp(JsGraphics *gfx, short x1, short y1, short width, short height, const unsigned char *pixelData);
