@@ -45,7 +45,7 @@ JsVarInt jswrap_graphics_getColorX(JsVar *parent, bool isForeground);
 JsVar *jswrap_graphics_setFontSizeX(JsVar *parent, int size, bool isVectorFont);
 JsVar *jswrap_graphics_setFontCustom(JsVar *parent, JsVar *bitmap, int firstChar, JsVar *width, int height);
 JsVar *jswrap_graphics_setFontAlign(JsVar *parent, int x, int y, int r);
-JsVar *jswrap_graphics_setFont(JsVar *parent, JsVar *name);
+JsVar *jswrap_graphics_setFont(JsVar *parent, JsVar *name, int size);
 JsVar *jswrap_graphics_getFont(JsVar *parent);
 JsVar *jswrap_graphics_getFonts(JsVar *parent);
 int jswrap_graphics_getFontHeight(JsVar *parent);
